--- a/ChatGPT demonstration.ipynb
+++ b/ChatGPT demonstration.ipynb
@@ -48,11 +48,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7034a3af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Column  Missing Values\n",
+      "0       Age             177\n",
+      "1     Cabin             687\n",
+      "2  Embarked               2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the Titanic dataset with missing values\n",
+    "url = 'https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "\n",
+    "# Check for missing values\n",
+    "missing_values = df.isnull().sum()\n",
+    "\n",
+    "# Filter and display only columns with missing values\n",
+    "missing_values_df = missing_values[missing_values > 0].reset_index()\n",
+    "missing_values_df.columns = ['Column', 'Missing Values']\n",
+    "\n",
+    "print(missing_values_df)"
+   ]
   },
   {
    "cell_type": "code",
