Update Cayden Wong - HW 01.ipynb
renamed header

--- a/Cayden Wong - HW 01.ipynb
+++ b/Cayden Wong - HW 01.ipynb
@@ -5,7 +5,7 @@
    "id": "54e1195f",
    "metadata": {},
    "source": [
-    "# Pre-lecture HW - Cayden Wong 2024/09/08"
+    "# STA130 Weel 1 HW - Cayden Wong 2024/09/08"
    ]
   },
   {
