--- a/Cayden Wong - HW 01.ipynb
+++ b/Cayden Wong - HW 01.ipynb
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f68e8625",
+   "id": "bc060cd0",
    "metadata": {},
    "source": [
     "# Post-lecture HW - Cayden Wong 2024/09/12"
@@ -1738,6 +1738,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "bfe42939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f52b7a267d0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic_df.groupby(\"age\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "5b00d7ef",
    "metadata": {},
@@ -1908,9 +1929,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4038e3f5",
+   "metadata": {},
+   "source": [
+    "##### Use your ChatBot session to understand what df.groupby(\"col1\")[\"col2\"].describe() does and then demonstrate and explain this using a different example from the \"titanic\" data set other than what the ChatBot automatically provide for you\n",
+    "\n",
+    "The `.groupby('col1')` method re-organizes observations in the data-frame by their value within `'col1'`. Observations with the same values are then grouped as a smaller dataframe. The `['col2']` key restricts the dataframe observations to only include information about `'col2'`, ingoring every other variable. Finally `.describes()` returns statistical information about a given dataframe, such as count, mean, std, etc. Using all three at once, we are re-organizing a dataframe to categorize its observations by their `'col1'` value, then we restrict the categorized dataframes to only include observation data relevant to `'col2'`, and then return statistical information the values in `'col2'` grouped by the values in `'col1'`. The result is a statistical analysis of the values in `'col2'` given that their `'col1'` value is some specific value. (For example: The mean of values in `\"fare\"` given that all the observations have a `\"pclass\"` value of `1`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59267d0c",
+   "id": "512ce9b9",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e9e10db",
+   "id": "d014c9d5",
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12474427",
+   "id": "8a3d9b27",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7d35759b",
+   "id": "acabf728",
    "metadata": {},
    "outputs": [
     {
