--- a/HW/HW 04 - Cayden Wong (PNG).ipynb
+++ b/HW/HW 04 - Cayden Wong (PNG).ipynb
@@ -12364,8 +12364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_size = vaccine_data.size\n",
-    "number_of_samples = 1000\n",
+    "initial_size = vaccine_data['ChangeInHealthScore'].size\n",
+    "number_of_samples = 10000\n",
     "mean_health_scores = np.array([])\n",
     "\n",
     "for _ in range(number_of_samples):\n",
