Updated course proposal w suggested group members

--- a/Course Project/project_proposal_v2.ipynb
+++ b/Course Project/project_proposal_v2.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# STA130 Course Project Proposal - Cayden Wong\n",
+    "**Proposed Group: Andrew Pols, Cayden Wong, Chenhao Sun, Jingbo Xu**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Research Question 1\n",
     "What are the common barriers to social connection, and how do perceived barriers, such as \"being too busy,\" influence actual social interaction patterns? Is there a difference between perceived and actual barriers?\n",
     "\n",
@@ -26,7 +34,8 @@
     "- **Normality**: Certain hypothesis tests assume data normality, which may not hold for all barrier variables.\n",
     "\n",
     "### Hypothesis and Expected Results\n",
-    "**Hypothesis**: Perceived busyness is more subjective than an actual constraint on social interactions, and perceived barriers differ from actual obstacles to social connection.\n",
+    "**Null hypothesis**: There is a correlation between perceived business and time spend doing activities that prevent social interaction and there is no correlation between perceived business and other social factors.\n",
+    "**Alternative Hypothesis**: Perceived busyness is more subjective than an actual constraint on social interactions, and perceived barriers differ from actual obstacles to social connection.\n",
     "\n",
     "**Expected Results**: Logistical barriers may still allow online or asynchronous activities, offering flexibility for busy individuals. Fear and anxiety are expected to negatively impact in-person interactions independently of logistical constraints. Financial barriers likely restrict access to in-person rather than online social activities."
    ]
@@ -60,7 +69,8 @@
     "- **Self-Reporting Bias**: Loneliness and social behaviors are subject to reporting bias, with potential over- or underreporting.\n",
     "\n",
     "### Hypotheses and Expected Results\n",
-    "**Hypothesis**: Higher loneliness is expected to correlate with lower in-person interaction frequency and meaningful interactions, while higher perceived support and secure attachment styles are linked with lower loneliness.\n",
+    "**Null Hypothesis**: There is no correlation between loneliness and in-person interaction frequency and perceived social support.\n",
+    "**Alternative Hypothesis**: Higher loneliness is expected to correlate with lower in-person interaction frequency and meaningful interactions, while higher perceived support and secure attachment styles are linked with lower loneliness.\n",
     "\n",
     "**Expected Results**: A significant negative correlation between in-person interactions and loneliness, with high social media use potentially indicating substitution for in-person interaction. Lower loneliness among those with high perceived support and secure attachments, suggesting the importance of secure relationships in reducing loneliness."
    ]
@@ -95,7 +105,8 @@
     "- **Self-Reporting Bias**: Recognizes potential biases in participants' self-reports of loneliness and family interactions.\n",
     "\n",
     "### Hypotheses and Expected Results\n",
-    "**Hypothesis**: Older adults with frequent family interactions are expected to report lower loneliness than those with limited family contact, while younger individuals without close family ties may exhibit higher loneliness scores. Family interaction (in-person or online) is hypothesized to reduce loneliness across all age groups.\n",
+    "**Null Hypothesis**: There is no correlation between age and perceived loneliness. The frequency of family interactions does not have any correlation with age or with perceived loneliness.\n",
+    "**Alternative Hypothesis**: Older adults with frequent family interactions are expected to report lower loneliness than those with limited family contact, while younger individuals without close family ties may exhibit higher loneliness scores. Family interaction (in-person or online) is hypothesized to reduce loneliness across all age groups.\n",
     "\n",
     "**Expected Results**: Negative correlation between family interaction frequency and loneliness, particularly for in-person contact. Higher loneliness among younger individuals lacking family connections, with older adults' loneliness mitigated by family support. Participants with perceived high-quality family support are expected to report lower loneliness."
    ]
