Update HW 06 - Cayden Wong (PNG).ipynb

--- a/HW/HW 06 - Cayden Wong (PNG).ipynb
+++ b/HW/HW 06 - Cayden Wong (PNG).ipynb
@@ -1031,7 +1031,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "H_0 there is no correlation between the short and long groups and the duration. Or $\\beta_1 = $\n",
+    "H_0 there is no correlation between the short and long groups and the duration. Or $\\beta_1 = 0$\n",
     "\n",
     "Since p < 0.001, we have very strong evidence against the null hypothesis."
    ]
