--- a/HW/HW 06 - Cayden Wong (PNG).ipynb
+++ b/HW/HW 06 - Cayden Wong (PNG).ipynb
@@ -1031,6 +1031,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "H_0 there is no correlation between the short and long groups and the duration. Or $\\beta_1 = 0$\n",
+    "\n",
+    "Since p < 0.001, we have very strong evidence against the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 12. Identify which of the histograms suggests the plausibility of the assumption that the distribution of error terms is normal for each of the models, and explain why the other three do not support this assumption.\n",
     "\n",
     "Session link for Q11 + Q12: NOT SUPPORTED VIEW SUMMARY"
