--- a/HW/HW 06 - Cayden Wong (PNG).ipynb
+++ b/HW/HW 06 - Cayden Wong (PNG).ipynb
@@ -1031,9 +1031,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "H_0 there is no correlation between the short and long groups and the duration. Or $\\beta_1 = 0$\n",
+    "**Null Hypothesis:**  \n",
+    "\\( H_0: \\) There is no difference in the average duration between the \"short\" and \"long\" waiting time groups, i.e., \\(\\beta_{contrast} = 0\\).\n",
     "\n",
-    "Since p < 0.001, we have very strong evidence against the null hypothesis."
+    "Given \\( p < 0.001 \\), we have very strong evidence to reject the null hypothesis, suggesting a statistically significant difference in duration between the \"short\" and \"long\" groups.\n",
+    "\n",
+    "### Model Specification:\n",
+    "\n",
+    "We redefine the \"short\" and \"long\" groups, using a cutoff where wait times of less than 68 minutes are labeled as \"short\" and wait times equal to or greater than 68 minutes are labeled as \"long.\" In this revised Simple Linear Regression model, we use an indicator variable \\( 1_{\\text{\"long\"}}(k_i) \\), where \\( k_i \\) represents the categorical variable indicating group membership (\"short\" or \"long\"). Our model specification becomes:\n",
+    "\n",
+    "\\[\n",
+    "Y_i = \\beta_{\\text{intercept}} + 1_{\\text{\"long\"}}(k_i) \\beta_{\\text{contrast}} + \\epsilon_i \\quad \\text{where} \\quad \\epsilon_i \\sim \\mathcal{N}(0, \\sigma)\n",
+    "\\]\n",
+    "\n",
+    "This model allows us to assess whether there’s a systematic difference in duration between \"short\" and \"long\" wait times on average.\n",
+    "\n",
+    "### Comparison with Previous Models:\n",
+    "\n",
+    "1. **Model 1:** `smf.ols('duration ~ waiting', data=old_faithful)`  \n",
+    "   This model uses the full dataset to fit a continuous linear relationship between waiting time and duration, without differentiating between short and long groups.\n",
+    "\n",
+    "2. **Model 2:** `smf.ols('duration ~ waiting', data=old_faithful[short_wait])`  \n",
+    "   This model fits the linear relationship but only for observations in the \"short\" group, thus estimating a separate slope for short wait times.\n",
+    "\n",
+    "3. **Model 3:** `smf.ols('duration ~ waiting', data=old_faithful[long_wait])`  \n",
+    "   Similarly, this model restricts the data to the \"long\" group and fits a slope specific to those longer wait times.\n",
+    "\n",
+    "### Interpretation:\n",
+    "\n",
+    "The new indicator-variable-based model differs from the previous models by directly comparing the average duration between \"short\" and \"long\" groups, rather than estimating separate linear relationships for each group. It simplifies the analysis by focusing on a binary difference in duration, rather than continuous slopes, and directly tests the null hypothesis that there is \"no difference in duration on average\" between the groups."
    ]
   },
   {
