--- a/HW/HW 06 - Cayden Wong (PNG).ipynb
+++ b/HW/HW 06 - Cayden Wong (PNG).ipynb
@@ -1032,17 +1032,17 @@
    "metadata": {},
    "source": [
     "**Null Hypothesis:**  \n",
-    "\\( H_0: \\) There is no difference in the average duration between the \"short\" and \"long\" waiting time groups, i.e., \\(\\beta_{contrast} = 0\\).\n",
+    "$ H_0: $ There is no difference in the average duration between the \"short\" and \"long\" waiting time groups, i.e., $\\beta_{contrast} = 0$.\n",
     "\n",
-    "Given \\( p < 0.001 \\), we have very strong evidence to reject the null hypothesis, suggesting a statistically significant difference in duration between the \"short\" and \"long\" groups.\n",
+    "Given $ p < 0.001 $, we have very strong evidence to reject the null hypothesis, suggesting a statistically significant difference in duration between the \"short\" and \"long\" groups.\n",
     "\n",
     "### Model Specification:\n",
     "\n",
-    "We redefine the \"short\" and \"long\" groups, using a cutoff where wait times of less than 68 minutes are labeled as \"short\" and wait times equal to or greater than 68 minutes are labeled as \"long.\" In this revised Simple Linear Regression model, we use an indicator variable \\( 1_{\\text{\"long\"}}(k_i) \\), where \\( k_i \\) represents the categorical variable indicating group membership (\"short\" or \"long\"). Our model specification becomes:\n",
+    "We redefine the \"short\" and \"long\" groups, using a cutoff where wait times of less than 68 minutes are labeled as \"short\" and wait times equal to or greater than 68 minutes are labeled as \"long.\" In this revised Simple Linear Regression model, we use an indicator variable $ 1_{\\text{\"long\"}}(k_i) $, where $ k_i $ represents the categorical variable indicating group membership (\"short\" or \"long\"). Our model specification becomes:\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "Y_i = \\beta_{\\text{intercept}} + 1_{\\text{\"long\"}}(k_i) \\beta_{\\text{contrast}} + \\epsilon_i \\quad \\text{where} \\quad \\epsilon_i \\sim \\mathcal{N}(0, \\sigma)\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "This model allows us to assess whether there’s a systematic difference in duration between \"short\" and \"long\" wait times on average.\n",
     "\n",
